Adding Portfolio API and fixing codegen script pointer modification (#68)
